@@ -314,16 +314,17 @@ typedef struct {
 #define MSG_GREY_HASH_MISMATCH		0x00000002
 #define MSG_IS_DNSBL			0x00000004
 #define MSG_IS_URIBL			0x00000008
-#define MSG_EMEW_OK			0x00000010
-#define MSG_DISCARD			0x00000020
-#define MSG_POLICY			0x00000040
-#define MSG_TAG				0x00000080
-#define MSG_TAGGED			0x00000100
-#define MSG_QUEUE			0x00000200
-#define MSG_SAVE			0x00000400
-#define MSG_TRAP			0x00000800
-#define MSG_INFECTED			0x00001000
-#define MSG_OK_AV			0x00002000
+#define MSG_IS_URI_IMPLICIT		0x00000010
+#define MSG_EMEW_OK			0x00000020
+#define MSG_DISCARD			0x00000040
+#define MSG_POLICY			0x00000080
+#define MSG_TAG				0x00000100
+#define MSG_TAGGED			0x00000200
+#define MSG_QUEUE			0x00000400
+#define MSG_SAVE			0x00000800
+#define MSG_TRAP			0x00001000
+#define MSG_INFECTED			0x00002000
+#define MSG_OK_AV			0x00004000
 
 #define MSG_END_BIT			MSG_TRAP
 
